--- a/index.html
+++ b/index.html
@@ -1,5 +1,22 @@
 ---
 layout: home
-title: My website
-subtitle: This is where I will tell my friends way too much about me
+subtitle: Join today for only $12.99!
 ---
+<h1>Are you barking yet?</h1>
+<h2>Join today for only $12.99</h2>
+
+<p>
+    WUPHF is a site that I'm launching to be the last word in social networking.
+    <br>
+    For just $12.99 a month WUPHF links up all of your communication portals so you are always within reach.
+    <br>
+    It's part of the dog pack as I call it.
+</p>
+<p>
+    When you send a WUPHF it goes your home phone, cell phone, email, Facebook, X (formerly Twitter), and home screen, all at the same.
+</p>
+
+<h3>Join the WUPHF Beta below!</h3>
+<div class="iframe-container">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/yL1z1ZHD0K4" frameborder="0" allowfullscreen></iframe>
+</div>
