Remove edit page

--- a/index.html
+++ b/index.html
@@ -18,5 +18,5 @@ subtitle: Join today for only $12.99!
 
 <h3>Join the WUPHF Beta below!</h3>
 <div class="iframe-container">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/yL1z1ZHD0K4" frameborder="0" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/G92XSPPrUmA" frameborder="0" allowfullscreen></iframe>
 </div>
