--- a/index.html
+++ b/index.html
@@ -16,7 +16,24 @@ subtitle: Join today for only $12.99!
     When you send a WUPHF it goes your home phone, cell phone, email, Facebook, X (formerly Twitter), and home screen, all at the same.
 </p>
 
-<h3>Join the WUPHF Beta below!</h3>
+<h3>Welcome to the WUPHF Beta!</h3>
+<br>
 <div class="iframe-container">
     <iframe width="560" height="315" src="https://www.youtube.com/embed/G92XSPPrUmA" frameborder="0" allowfullscreen></iframe>
 </div>
+
+<h3>Some of our supporters</h3>
+
+<p><i>&#x275D;WUPHF is the future, Ryan! Okay? It's e-mail, it's voicemail, it's fax, instant messaging, pidgeon... all in one.&#x275E;</i> <b> - Michael Scott</b></p>
+
+<p><i>&#x275D;When the world's on the brink of destruction and every second counts, you don't have time to send a separate message to every device. That's why I use WUPHF.com. One Wuphf — every screen lights up. Even the President's.&#x275E;</i> <b> - Michael Scarn</b></p>
+
+<p><i>&#x275D;WUPHF? Oh yeah, I heard about that in the clink. That's how the Dementors get ya! You think you're safe, then BAM — you get WUPHFed on your pager, your fax, your toilet paper, your soul. Ain't no privacy in prison... or with WUPHF!&#x275E;</i> <b> - Prison Mike</b></p>
+
+<p><i>&#x275D;WUPHF is amazing. You can be texted, emailed, faxed, and paged all at the same time. So you can't hide! It was entirely my idea, based on my need to get in touch with Ryan all the time through every single medium.&#x275E;</i> <b> - Kelly Kapoor</b></p>
+
+<p><i>&#x275D;WUPHF is dangerously efficient. I sent one to Mose — it went to his fax machine, his beeper, and somehow set off the beet alarm. Technology is a weapon. Use it wisely.&#x275E;</i> <b> - Dwight Schrute</b></p>
+
+<p><i>&#x275D;I once invented something like WUPHF back in the '70s. It was called ScreechMail. Got banned by the FCC. Good times.&#x275E;</i> <b> - William Charles Schneider</b></p>
+
+<p><i>&#x275D;If WUPHF contacts me one more time during Pretzel Day, I’m gonna throw my phone in the Scranton River.&#x275E;</i> <b> - Stanley Hudson</b></p>
